# bookbind

./: .gitignore  OBJECTIVES.md  README.md  THYME_OS_RELEASE_NOTES.md  USER_GUIDE.md  bookbind.sh  fix_libresolv.sh  fix_thyme_issues.sh  keyboard_fix.sh  plan.md  thyme_installer.sh  thyme_os_features.md  wipe_drive.sh
.claude/: settings.local.json
.dev/objectives/: bookbind-linux-installer.md
archive/: thyme_efi_cleanup_fix.sh  thyme_keyboard_fix.sh  thyme_os_mint_based_installer.sh  thyme_os_ssd_installer.sh
branding/: brand_guidelines.md  desktop_assets.py
branding/desktop_assets/: deploy_assets.sh  gtk_colors.conf  sound_theme.conf
branding/desktop_assets/cursor_theme/: index.theme
built_in_features/: freezing_sleep_fixes  network_boot_final.py  testing_session_lessons.md
grub_files/: grubia32.efi  grubx64.efi
optimizations/: macbook_fixes.sh  memory_management.sh  service_optimization.sh  sleep_wake_fixes.sh  thermal_control.sh
thyme-editor-tools/: README.md  install-editor.sh  test-syntax.py
thyme-editor-tools/thyme-editor-config/: thyme-bindings.json  thyme-colorscheme.micro
thyme-os-repo/: CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  SECURITY.md  migrate_files.sh
thyme-os-repo/.github/: PULL_REQUEST_TEMPLATE.md
thyme-testing-framework/: package-optimization-plan.md  quick-vm-test.sh  test-device-detection.sh  thyme_streamlined_installer.sh  vm-testing-setup.sh
thyme_apps/: setup_dev_environment.sh
thyme_apps/docs/: roadmap.md  thyme_calc_requirements.md
thyme_apps/thyme_edit/: CMakeLists.txt
thyme_apps/thyme_edit/include/: thyme_edit_main_window.h  thyme_edit_text_editor.h
thyme_apps/thyme_edit/resources/: thyme_edit.desktop.in
thyme_apps/thyme_edit/src/: main.cpp
website/: index.html  style.css
(+38 files in other folders)
